# game

./: .gitignore  CMakeLists.txt  build.py
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  game
dotnet_client/: Program.cs
first_game/: build.py
first_game/dotnet_client/: Program.cs
first_game/python_game/: last.json  main.py  savings
game_0/: main.py
python_game/: main.py
src/game/: main.c
